[package]
name = "axum-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
futures-util = "0.3.31"
redis = { version = "0.32.3", features = ["aio", "async-std-comp", "connection-manager", "tokio-comp"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["rt-multi-thread"] }
